--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,14 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "node express",
   "main": "server.js",
+  "type": "module",
+  "engines": {
+    "node": "21.2.0"
+  },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
