--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "engines": {
-    "node": "21.2.0"
+    "node": "18.x"
   },
   "scripts": {
     "start": "node server.js"
