server type changes

--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "node express",
   "main": "server.js",
-  "type": "module",
+  "type": "commonjs",
   "engines": {
     "node": "18.x"
   },
