--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "node express",
+  "description": "",
   "main": "server.js",
-  "type": "commonjs",
-  "engines": {
-    "node": "18.x"
-  },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "",
@@ -16,10 +13,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.2"
-  },
-  "devDependencies": {
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.0.2"
   }
 }
